@@ -1,3 +1,7 @@
+----- cvs ci -----
+Wed Aug 30 18:20:17 UTC 2000
+sms:
+* finished support for GNU readline
 
 ----- cvs ci -----
 Wed Aug 30 01:28:53 UTC 2000
